--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>material-design-icons</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
             <artifactId>angularjs</artifactId>
             <version>1.3.14</version>
         </dependency>
@@ -72,8 +82,7 @@
             <groupId>org.webjars</groupId>
             <artifactId>angular-ui-bootstrap</artifactId>
             <version>0.12.1-1</version>
-        </dependency>
-
+        </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
