--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>1.9.1</version>
+            <!-- <version>1.9.1</version> -->
+            <version>3.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
@@ -76,13 +77,18 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angularjs</artifactId>
-            <version>1.3.14</version>
+            <version>1.5.8</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angular-ui-bootstrap</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <!-- <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-ui-bootstrap</artifactId>
             <version>0.12.1-1</version>
-        </dependency>        
+        </dependency>         -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
