--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=dev,default
 server.contextPath=/dev
 logging.level.org.springframework=INFO
 
@@ -7,3 +8,20 @@ spring.thymeleaf.prefix=${project.base-dir}/templates/
 spring.resources.static-locations=${project.base-dir}/static/
 spring.thymeleaf.cache=false
 spring.resources.cache-period=0
+
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.initialize=true
+
+spring.datasource.url=jdbc:h2:mem:actordb;MODE=MySQL;INIT=create schema IF NOT EXISTS uhapp_db;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
